--- a/labs/cloud/README.adoc
+++ b/labs/cloud/README.adoc
@@ -5,8 +5,9 @@ operating applications in a cloud environment.  This module will explore a coupl
 application api management via a gateway.
 
 
-Docs: link: link:https://spring.io/projects/spring-cloud-config[Spring Cloud Config]
-link:https://docs.pivotal.io/spring-cloud-services/3-1/common/config-server/index.html[Spring Cloud Services]
+Docs: link: link:https://spring.io/projects/spring-cloud-config[Spring Cloud Config] and 
+link:https://docs.pivotal.io/spring-cloud-services/3-1/common/config-server/index.html[Spring Cloud Services] and
+link:https://cloud.spring.io/spring-cloud-static/spring-cloud-config/2.2.3.RELEASE/reference/html/#_spring_cloud_config_server
 
 == Get the project
 
@@ -109,7 +110,7 @@ spring:
     name: greeting-service
 ---------------------------------------------------------------------
 
-.  Create a new class, WebSecurityConfig in the config pacakge.  This will create a security profile that will allow all requests.
+.  Create a new class, WebSecurityConfig in the config pacakge.  This will override the default security profile and allow all requests.
 +
 [source, java]
 .WebSecurityConfig.java
