--- a/labs/cloud/README.adoc
+++ b/labs/cloud/README.adoc
@@ -5,9 +5,14 @@ operating applications in a cloud environment.  This module will explore a coupl
 application api management via a gateway.
 
 
-Docs: link: link:https://spring.io/projects/spring-cloud-config[Spring Cloud Config] and 
-link:https://docs.pivotal.io/spring-cloud-services/3-1/common/config-server/index.html[Spring Cloud Services] and
-link:https://cloud.spring.io/spring-cloud-static/spring-cloud-config/2.2.3.RELEASE/reference/html/#_spring_cloud_config_server
+Docs:
+link:http://spring.io/cloud[Spring Cloud]
+
+link:https://spring.io/projects/spring-cloud-config[Spring Cloud Config] 
+
+link:https://docs.pivotal.io/spring-cloud-services/3-1/common/config-server/index.html[Spring Cloud Services]
+
+link:https://cloud.spring.io/spring-cloud-static/spring-cloud-config/2.2.3.RELEASE/reference/html/#_spring_cloud_config_server[Config Server]
 
 == Get the project
 
