--- a/labs/data_rest/README.adoc
+++ b/labs/data_rest/README.adoc
@@ -38,6 +38,11 @@ spring-workshop-2020:
     <artifactId>h2</artifactId>
     <scope>runtime</scope>
 </dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 ---------------------------------------------------------------------
 
 . Convert the Greeting class into an @Entity
