--- a/templates-and-samples/generic-agenda.adoc
+++ b/templates-and-samples/generic-agenda.adoc
@@ -6,65 +6,65 @@ This one day, hands-on, classroom style session will provide developers with exp
 Below is a sample agenda.  It makes for a packed day, and we work with clients to tailor an agenda that fits
 their needs.  We will cut, add, and/or split these topics as necessary.
 
-== Schedule
+== Schedule Sample
 
 08:00 AM - 08:45 AM::
  * Welcome and Agenda
  * Overview: Cloud Native Design, Domain Driven Design, & Microservices
 08:45 AM - 09:30 AM::
  * Session 1: Introducing Spring and Spring Boot
- * Lab 1: link:labs/lab01/lab01.adoc[Building A Spring Boot Application]
+ * Lab 1: link:labs/lab01/README.adoc[Building A Spring Boot Application]
 09:30 AM - 10:15 AM::
  * Session 2: Advancing Spring Boot with Actuator and Profiles
- * Lab 2: link:labs/lab02/lab02.adoc[_Actuator and Profiles_]
+ * Lab 2: link:labs/lab02/README.adoc[_Actuator and Profiles_]
 10:15 AM - 11:30 AM:: Break
 10:30 AM - 11:15 AM::
   * Session 3: Accessing Data from Databases
   * Lab 4: link:labs/lab03/README.md[_Spring Data ReST_]
 11:15 AM - 12:00 AM::
   * Session 4: Introduction to Spring Cloud
-  * Lab 4: link:labs/lab04/lab04.adoc[_Adding Remote Configuration_]
+  * Lab 4: link:labs/lab04/README.adoc[_Adding Remote Configuration_]
 12:00 PM - 12:45 PM:: Lunch
 12:45 PM - 01:30 PM::
   * Session 5: Service Discovery & Load Balancing
-  * Lab 5: link:labs/lab05/lab05.adoc[_Service Discovery and Load Balancing_]
+  * Lab 5: link:labs/lab05/README.adoc[_Service Discovery and Load Balancing_]
 01:30 PM - 02:15 PM::
   * Session 6: Fault Tolerance with Circuit Breakers
-  * Lab 6: link:labs/lab06/lab06.adoc[_Adding Circuit Breakers_]
+  * Lab 6: link:labs/lab06/README.adoc[_Adding Circuit Breakers_]
 02:15 PM - 02:30 PM:: Break
 02:30 PM - 03:15 PM::
   * Session 7: Micro-proxy
-  * Lab 7: link:labs/lab07/lab07.adoc[_Zuul Micro-proxy_]
+  * Lab 7: link:labs/lab07/README.adoc[_Spring Cloud Gateway_]
 03:15 PM - 04:00 PM::
   * Session 8: Sleuth/Zipkin
-  * Lab 8: link:labs/lab08/lab08.adoc[_Logging and Tracing_]
+  * Lab 8: link:labs/lab08/README.adoc[_Logging and Tracing_]
 04:00 PM - 04:45 PM::
   * Session 9: Deploying and Operating on PCF
 04:45 PM - 05:00 PM:: Wrap-Up and Closing
 
 
-== Schedule
+== Schedule Sample
 
 10:00 AM - 11:00 AM::
  * Welcome and Agenda
  * Overview: Cloud Native Design, Pivotal Cloud Foundry
 11:00 AM - 12:00 AM::
  * Session 1: Using Pivotal Cloud Foundry
- * Lab: link:labs/lab08[_PCF Exercises_]
+ * Lab: link:labs/pcf/README.adoc[_PCF Exercises_]
 12:00 PM - 12:45PM::
  * Lunch
 12:45 AM - 13:45 AM::
  * Session 2: Intro to Spring Ecosystem
- * Lab: link:labs/lab01[_Build a Boot app_]
+ * Lab: link:labs/lab01/README.adoc[_Build a Boot app_]
 13:45 AM - 14:45 AM::
   * Session 3: More Spring
-  * Lab: link:labs/lab02[_Actuator_]
-  * Lab: link:labs/lab04[_Configuration_]
+  * Lab: link:labs/lab02/README.adoc[_Actuator_]
+  * Lab: link:labs/lab04/README.adoc[_Configuration_]
 14:45 PM - 15:00 PM:: Break
 15:00 PM - 16:00 PM::
   * Session 4: Observability, Discovery, Fault Tolerance, Consistancy
   * Lab: ??
 16:00 PM - 16:30 PM::
   * Session 5: blue/green deploy example in Concourse
-  * link:https://github.com/pivotalservices/concourse-pipeline-samples[Samples]
+  * Lab: link:https://github.com/pivotalservices/concourse-pipeline-samples[_Deployment Samples_]
 16:30 PM - 17:00 PM:: Wrap-up
